// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`issue assigned notification when issue is assigned, posts an issue assigned notification card 1`] = `
Array [
  Array [
    Object {
      "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
      "body": Array [
        Object {
          "columns": Array [
            Object {
              "items": Array [
                Object {
                  "color": "Accent",
                  "text": "[fooRepoName](fooURL)",
                  "type": "TextBlock",
                  "weight": "Lighter",
                },
                Object {
                  "color": "Light",
                  "size": "Large",
                  "spacing": "Small",
                  "text": "Issue assigned to [fooUser](fooUserUrl)",
                  "type": "TextBlock",
                  "weight": "Bolder",
                  "wrap": true,
                },
              ],
              "type": "Column",
              "width": "stretch",
            },
          ],
          "type": "ColumnSet",
        },
        Object {
          "columns": Array [
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "Assigned by:",
                  "type": "TextBlock",
                },
                Object {
                  "color": "Light",
                  "spacing": "Small",
                  "text": "Issue:",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": 35,
            },
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "[barUser](barUserUrl)",
                  "type": "TextBlock",
                },
                Object {
                  "color": "Light",
                  "spacing": "Small",
                  "text": "[#5 - fooTitle](fooHtml)",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": 65,
            },
          ],
          "horizontalAlignment": "Center",
          "spacing": "Padding",
          "type": "ColumnSet",
        },
      ],
      "type": "AdaptiveCard",
      "version": "1.2",
    },
  ],
]
`;

exports[`issue assigned notification when pull request opened, posts a pull request notification card 1`] = `
Array [
  Array [
    Object {
      "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
      "body": Array [
        Object {
          "columns": Array [
            Object {
              "items": Array [
                Object {
                  "color": "Accent",
                  "text": "[fooRepoName](fooURL)",
                  "type": "TextBlock",
                  "weight": "Lighter",
                },
                Object {
                  "color": "Light",
                  "size": "Large",
                  "spacing": "Small",
                  "text": "Pull Request opened: [fooTitle](fooHtml)",
                  "type": "TextBlock",
                  "weight": "Bolder",
                  "wrap": true,
                },
              ],
              "type": "Column",
              "width": "stretch",
            },
          ],
          "type": "ColumnSet",
        },
        Object {
          "columns": Array [
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "Opened by:",
                  "type": "TextBlock",
                },
                Object {
                  "color": "Light",
                  "spacing": "Small",
                  "text": "PR#:",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": 35,
            },
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "[barUser](barUserUrl)",
                  "type": "TextBlock",
                },
                Object {
                  "color": "Light",
                  "spacing": "Small",
                  "text": "5",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": 65,
            },
          ],
          "horizontalAlignment": "Center",
          "spacing": "Padding",
          "type": "ColumnSet",
        },
        Object {
          "actions": Array [
            Object {
              "title": "Open in Github Enterprise",
              "type": "Action.OpenUrl",
              "url": "fooHtml",
            },
          ],
          "type": "ActionSet",
        },
      ],
      "type": "AdaptiveCard",
      "version": "1.2",
    },
  ],
]
`;
